--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Depression Detector</string>
     <string name="logo">Logo</string>
+    <string name="help">Help</string>
+    <string name="menuicon">menuIcon</string>
 </resources>
